# roboinno_hackathon_6

./: .gitignore  MIRMI_Robo-innovate2025.rdk  README.md  docker-compose.yaml
backend/: .gitignore  DrawSvgOnBoard_robo-innovate.py  MIRMI_Robo-innovate2025.rdk  README.md  docker-compose.yml
backend/cobot/: .env  .gitignore  Dockerfile  Dockerfile.dev  README.md  pyproject.toml  uv.yml
backend/cobot/cobot/: main.py
backend/cobot/cobot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/cobot/cobot/api/: router.py
backend/cobot/cobot/api/v1/: gpt.py  robot.py  svg.py
backend/cobot/cobot/auth/: deps.py
backend/cobot/cobot/llm/: deps.py  svg_api.py
backend/cobot/cobot/robot/: draw_svg.py
backend/cobot/cobot/services/: deps.py
backend/cobot/cobot/services/base/: manager.py
backend/cobot/cobot/services/settings/: __init__.py  app.py  service.py
backend/cobot/cobot/simulate/: getPathFromDrawSvg.py
backend/cobot/cobot/svg/: image_to_svg.py
backend/robo_sim/: Dockerfile.dev  environment.yml
backend/robo_sim/src/: controller.py  dataprocessing.py  getPath.py  getPathFromDrawSvg.py  getPreview.py  laolaWelle.py  main.py  simMinimalExample.py  teachmain.py  tempCodeRunnerFile.py  utils.py  visRoboDH.py  visRoboDH_in2dPlain.py
frontend/: Dockerfile  Dockerfile.dev  Makefile  angular.json  docker-compose.yml  index.html  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  vite.config.ts
frontend/src/: index.html  main.tsx  routeTree.gen.ts
frontend/src/app/: app-menu.component.html  app.component.ts  (+6 more)
src/backend/: pyproject.toml
(+45 files in other folders)
