[project]
name = "cobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.11",
    "loguru>=0.7.3",
    "openai>=1.66.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "python-multipart>=0.0.20",
    "robodk>=5.8.0",
    "uvicorn>=0.34.0",
    "svgpathtools>=1.6.1",
    "robodk>=5.8.0",
    "requests>=2.32.3",
]


